<resources>
    <string name="app_name">PepperFry</string>
    <string name="get_free_delivery"><![CDATA[& Get Free Delivery]]></string>
    <string name="on_your_first_order_over_abave_offers_on_site"><![CDATA[On Your First Order, Over & Abave Offers On Site]]></string>
    <string name="and"><![CDATA[&]]></string>
    <string name="profile">PROFILE</string>
    <string name="wishlist">WISHLIST</string>
    <string name="alert">ALERT</string>
    <string name="department">DEPARTMENT</string>
    <string name="home">HOME</string>
    <string name="furniture">Furniture</string>
    <string name="living">Living</string>
    <string name="bedroom">Bedroom</string>
    <string name="kids_room">Kids Room</string>
    <string name="mattresses">Mattresses</string>
    <string name="furnishing">Furnishing</string>
    <string name="decor">Decor</string>
    <string name="lighting">Lighting</string>
    <string name="furniture2">FURNITURE</string>
    <string name="dining_bar"><![CDATA[Dining & Bar]]></string>
    <string name="living2">LIVING</string>
    <string name="bedroom2">BEDROOM</string>
    <string name="kids_room2">KIDS ROOM</string>
    <string name="no_notification">No Notification</string>
    <string name="your_notification">Your Notification will show up here</string>
    <string name="start_shopping">Start Shopping</string>
    <string name="sign_in_notification">Sign in to view personalized notifications</string>
    <string name="sign_in">Sign In</string>
    <string name="Your_Wish_list">Your Wish List Is Empty !</string>
    <string name="Explore_More">Explore More And Shortlist Some Items. </string>
    <string name="acc_profile_signIn">profile_signIn</string>
    <string name="mobile_verification">MOBILE VERIFICATION</string>
    <string name="waiting_opt">Waiting for OTP to Verify Your Mobile No</string>
    <string name="validate_opt">The OTP is valid For 30 Mins</string>
    <string name="did_not_receive_otp">Did not Receive Your OTP? </string>
    <string name="resend_otp">Resend OTP</string>
    <string name="you_have_won">You Have Won</string>
    <string name="an_coupon">An Exclusive Coupon</string>
    <string name="Enjoy_free">Enjoy Free Delivery</string>
    <string name="first_order">On Your First Order</string>
    <string name="pepperfry">PEPPERFRY</string>
    <string name="hurry_up">Hurry Up! Offer Valid For 7 Days.</string>
    <string name="coupon_details">Coupon details along with a verification link</string>
    <string name="dining_bars"><![CDATA[Dining & Bars]]></string>
    <string name="sofas">Sofas</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="cushions_cover"><![CDATA[Cushions & Cover]]></string>
    <string name="get_extra"></string>
</resources>