<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/celebration1"
    tools:context="com.example.StartShoppingActivity">

    <TextView
        android:id="@+id/tvCongo"
        style="@style/Fira_font"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="180dp"
        android:text="Congratulations!"
        android:textColor="#e85d04"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvYourWon"
        style="@style/Fira_font"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="85dp"
        android:padding="5dp"
        android:text="@string/you_have_won"
        android:textColor="@color/black"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvCongo" />

    <TextView
        android:id="@+id/tvCoupon"
        style="@style/Fira_font"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/an_coupon"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintLeft_toRightOf="@id/tvYourWon"
        app:layout_constraintTop_toBottomOf="@id/tvCongo" />

    <androidx.cardview.widget.CardView
        android:id="@+id/couponCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:elevation="5dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvCoupon">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ced4da"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                style="@style/Fira_font"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Enjoy_free"
                android:textColor="#e85d04"
                android:textSize="20sp"
                android:textStyle="normal" />

            <TextView
                style="@style/Fira_font"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/first_order"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="normal" />

            <TextView
                style="@style/Fira_font"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/add_image"
                android:paddingHorizontal="10dp"
                android:paddingVertical="5dp"
                android:text="@string/pepperfry"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="normal" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tvHurryUp"
        style="@style/Fira_font"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/hurry_up"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/couponCard" />

    <TextView
        android:id="@+id/tvCoupon_details"
        style="@style/Fira_font"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/coupon_details"
        android:textColor="#adb5bd"
        android:textSize="10sp"
        android:textStyle="normal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvHurryUp" />

    <Button
        android:id="@+id/BtnStartShoping"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:background="@drawable/gradient_rectangle"
        android:text="@string/start_shopping"
        android:textColor="@color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvCoupon_details" />



</androidx.constraintlayout.widget.ConstraintLayout>