<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.AllNotificationFragment">

    <TextView
        android:id="@+id/tvNo_Notification"
        style="@style/Fira_font"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:gravity="center_horizontal"
        android:text="@string/no_notification"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvyourNotification"
        style="@style/Fira_font"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:gravity="center_horizontal"
        android:text="@string/your_notification"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:layout_below="@id/tvNo_Notification"
        android:textStyle="normal" />

    <ImageView
        android:id="@+id/ivnotificationIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:layout_centerInParent="true"
        android:layout_below="@id/tvyourNotification"
        android:src="@drawable/ic_no_notifications" />

    <Button
        android:id="@+id/btnStartShop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        android:background="@drawable/rectangle"
        android:text="@string/start_shopping"
        android:textColor="@color/dark_orange"
        android:textSize="15sp"
        android:textStyle="normal"
        android:layout_marginTop="20dp"
        android:layout_below="@id/ivnotificationIcon"/>

</RelativeLayout>