<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    tools:context="com.example.MobileNumberVerificationActivity">

    <ImageView
        android:id="@+id/ivbackToRegistration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:padding="15dp"
        android:src="@drawable/ic_left_chevron"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvMobileVerification"
        style="@style/Fira_font"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/mobile_verification"
        android:textColor="@color/black"
        app:layout_constraintLeft_toRightOf="@id/ivbackToRegistration"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivShopCart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:padding="9dp"
        android:src="@drawable/ic_shopping_cart"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivSearchBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:padding="6dp"
        android:src="@drawable/ic_search"
        app:layout_constraintRight_toLeftOf="@id/ivShopCart"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvwaiting_otp"
        style="@style/Fira_font"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:layout_marginTop="50dp"
        android:text="@string/waiting_opt"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvMobileVerification" />

    <TextView
        android:id="@+id/tvMobileNumber"
        style="@style/Fira_font"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="1dp"
        android:paddingLeft="20dp"
        android:text="7458912301"
        android:textColor="@color/dark_orange"
        android:textSize="15sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvwaiting_otp" />

    <com.broooapps.otpedittext2.OtpEditText
        android:id="@+id/etOtp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="false"
        android:textColor="@color/dark_orange"
        android:layout_marginTop="60dp"
        android:cursorVisible="false"
        android:digits="0123456789"
        android:inputType="number"
        android:maxLength="6"
        android:padding="8dp"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvMobileNumber"
        app:oev_primary_color="@color/dark_orange"
        app:oev_secondary_color="@color/dark_orange" />



    <TextView
        android:id="@+id/tvOtpValidate"
        style="@style/Fira_font"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/validate_opt"
        android:textColor="#a5a58d"
        android:textSize="12sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etOtp" />

    <TextView
        android:id="@+id/tvOtpnotReceive"
        style="@style/Fira_font"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/did_not_receive_otp"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:paddingLeft="90dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvOtpValidate" />

    <TextView
        android:id="@+id/tvOtpResend"
        style="@style/Fira_font"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/resend_otp"
        android:textColor="@color/dark_orange"
        android:textSize="12sp"
        app:layout_constraintLeft_toRightOf="@id/tvOtpnotReceive"
        app:layout_constraintTop_toBottomOf="@id/tvOtpValidate" />
    <Button
        android:id="@+id/buttonConfirm"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="27dp"
        android:layout_marginEnd="27dp"
        android:background="@drawable/gradient_rectangle"
        android:text="Confirm"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.748" />


</androidx.constraintlayout.widget.ConstraintLayout>