<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/ivbackToRegistration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:padding="15dp"
        android:src="@drawable/ic_left_chevron"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvMobileVerification"
        style="@style/Fira_font"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/mobile_verification"
        android:textColor="@color/black"
        app:layout_constraintLeft_toRightOf="@id/ivbackToRegistration"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivShopCart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:padding="9dp"
        android:src="@drawable/ic_shopping_cart"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivSearchBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:padding="6dp"
        android:src="@drawable/ic_search"
        app:layout_constraintRight_toLeftOf="@id/ivShopCart"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvwaiting_otp"
        style="@style/Fira_font"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:layout_marginTop="50dp"
        android:text="@string/waiting_opt"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvMobileVerification" />

    <TextView
        android:id="@+id/tvMobileNumber"
        style="@style/Fira_font"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="1dp"
        android:paddingLeft="20dp"
        android:text="7458912301"
        android:textColor="@color/dark_orange"
        android:textSize="15sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvwaiting_otp" />

    <GridLayout
        android:id="@+id/gridRow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:padding="20dp"
        android:columnCount="6"
        android:rowCount="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvMobileNumber">

        <EditText
            android:id="@+id/EtvFirstDigit"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="0"
            android:inputType="phone" />

        <EditText
            android:id="@+id/EtvSecondDigit"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="1"
            android:inputType="phone" />

        <EditText
            android:id="@+id/EtvThirdDigit"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="2"
            android:inputType="phone" />

        <EditText
            android:id="@+id/EtvFourthDigit"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="3"
            android:inputType="phone" />

        <EditText
            android:id="@+id/EtvFifthDigit"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="4"
            android:inputType="phone" />

        <EditText
            android:id="@+id/EtvSixthDigit"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="5"
            android:inputType="phone" />

    </GridLayout>

    <TextView
        android:id="@+id/tvOtpValidate"
        style="@style/Fira_font"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/validate_opt"
        android:textColor="#a5a58d"
        android:textSize="12sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/gridRow" />

    <TextView
        android:id="@+id/tvOtpnotReceive"
        style="@style/Fira_font"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/did_not_receive_otp"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:paddingLeft="90dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvOtpValidate" />

    <TextView
        android:id="@+id/tvOtpResend"
        style="@style/Fira_font"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/resend_otp"
        android:textColor="@color/dark_orange"
        android:textSize="12sp"
        app:layout_constraintLeft_toRightOf="@id/tvOtpnotReceive"
        app:layout_constraintTop_toBottomOf="@id/tvOtpValidate" />

</androidx.constraintlayout.widget.ConstraintLayout>